--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ dependencies = [
     "openpyxl>=3.1.0",
     "requests>=2.31.0",
     "python-dotenv>=1.0.0",
+    "yfinance>=0.2.0",
+    "vaderSentiment>=3.1.0",
+    "eventregistry>=1.0.0",
 ]
 
 [project.optional-dependencies]
